--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,51 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    font-family: 'Amatic SC', 'Sans' ;
+    font-size: 30px;
+    background-color: black;
+    color: white;
+    margin: 0px;
+    padding: 0px;
+}
+button {
+
+    display: block;
+    
+    font-size: 1.5em;
+    font-family: inherit;
+
+    border: 1px solid rgb(138, 43, 226);
+    border-radius: 5px;
+    
+    margin: 10px;
+    padding: 10px;
+    min-height: 100px;
+    min-width: 300px;
+
+    color: white;
+    background-color: transparent;
+}
+button:focus {
+    outline: none;
+}
+
+
+.centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.flex-grow {
+    flex: 1 0 auto;
+}
+
+
+.question-text {
+    font-size: 2em;
+    padding: 10px;
+    margin-bottom: 30px;
+    text-align: center;
+}
