--- a/src/app/question/question.component.scss
+++ b/src/app/question/question.component.scss
@@ -1,8 +1,3 @@
-body {
-    margin: 0px;
-    padding: 0px;
-}
-
 .container {
     padding: 15px;
 }
@@ -23,19 +18,9 @@ body {
     }
 }
 
-.answer:hover {
-    background-color: rgba(138, 43, 226, 0.2);
-}
-
 .selected {
     background-color: rgba(138, 43, 226, 0.4);
 }
-
-.answer-text {
-    flex: 1 0 auto;
-    margin: 15px;
-}
-
 
 .flex {
     display: inline-flex;
@@ -45,6 +30,10 @@ body {
 
 .flex-grow {
     flex: 1 0 auto;
+}
+
+.action {
+  min-width: 150px;
 }
 
 
@@ -60,7 +49,7 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 
 
 .checkmark {
-    flex: 0 0 auto;
+  flex: 0 0 auto;
   width: 56px;
   height: 56px;
   border-radius: 50%;
