--- a/src/app/app-page/app-page.component.scss
+++ b/src/app/app-page/app-page.component.scss
@@ -6,18 +6,21 @@
 }
 
 .title {
+    flex: 0 0 auto;
     font-size: 2em;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
 }
 .content {
-    flex: 1 0 auto;
-    overflow-y: scroll;
+    flex: 1 1 auto;
+    overflow-y: auto;
+
     padding-left: 20px;
     padding-right: 20px
 }
 .actions {
+    flex: 0 0 auto;
     display: flex;
     flex-direction: row;
     margin-right: 10px;
