--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,17 @@
 $green: #7ac142;
 
 
+@font-face {
+    font-family: 'Amatic SC';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Amatic SC Regular'), local('AmaticSC-Regular'), url(./assets/fonts/amaticsc.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 body {
-    font-family: 'Amatic SC', 'Sans' ;
+    font-family: 'Amatic SC' ;
     font-size: 30px;
     background-color: black;
     color: white;
@@ -24,7 +33,7 @@ button {
     border-radius: 5px;
     
     margin: 10px;
-    height: 100px;
+    height: 90px;
     min-width: 300px;
     padding-left: 10px;
     padding-right: 10px;
