--- a/src/app/app-page/app-page.component.scss
+++ b/src/app/app-page/app-page.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    width: 100vw;
     overflow: hidden;
 }
 
@@ -10,15 +11,14 @@
     font-size: 2em;
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
+
 .content {
     flex: 1 1 auto;
     overflow-y: auto;
-
-    padding-left: 20px;
-    padding-right: 20px
 }
+
 .actions {
     flex: 0 0 auto;
     display: flex;
