Various UI updates...

--- a/src/app/app-page/app-page.component.scss
+++ b/src/app/app-page/app-page.component.scss
@@ -12,6 +12,7 @@
     text-align: center;
     margin-top: 20px;
     margin-bottom: 15px;
+    font-weight: bold;
 }
 
 .content {
@@ -26,8 +27,4 @@
     margin-right: 10px;
     margin-bottom: 10px;
     align-items: center;
-}
-
-.flex-grow {
-    flex: 1 0 auto;
 }
