--- a/src/app/countdown-timer/countdown-timer.component.html
+++ b/src/app/countdown-timer/countdown-timer.component.html
@@ -1,7 +1,6 @@
 <div page-action class="countdown">
     <div class="countdown-number">{{countdown}}</div>
-
-    <div>
+    <div class="countdown-description">
         <div>{{subtitle}}</div>
         <div class="bar" [style.width]="countdownWidth()" [style.backgroundColor]="countdownColor()"></div>
     </div>
