--- a/src/app/countdown-timer/countdown-timer.component.scss
+++ b/src/app/countdown-timer/countdown-timer.component.scss
@@ -1,14 +1,22 @@
 .countdown {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    margin-right: 20px;
+
     .countdown-number {
+        flex: 0 0 auto;
         font-size: 1.5em;
         margin-right: 10px;
+        width: 30px;
+    }
+    
+    .countdown-description {
+        flex: 1 1 auto;
     }
 
     .bar {
         background-color: red;
         height: 10px;
+
     }
 }
