--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,20 +1,16 @@
 <app-page [title]="question.text">
     <div page-content class="answer-container">
-        <button *ngFor="let answer of question.answers; index as i;" class="answer flex-grow" [ngClass]='{selected: i == this.selectedAnswer}' (click)="this.onSelect(i)" >
-            <div class="flex">
-                
-                <span class="answer-text flex-grow">
-                    {{answer.text}}
-                </span>
-
-                <svg *ngIf="this.selectedAnswer == i" class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52"><circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/><path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/></svg>
-                
+        <button class="answer" *ngFor="let answer of question.answers; index as i;" [ngClass]='{selected: i == this.selectedAnswer}' (click)="this.onSelect(i)" >
+            <div class="flex-grow"></div>
+            <div class="answer-text">
+                {{answer.text}}
             </div>
+            <svg *ngIf="this.selectedAnswer == i" class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52"><circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/><path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/></svg>
+            <div class="flex-grow"></div>
         </button>
     </div>
 
-    <app-countdown-timer #countdown page-action [countdownLength]="30" [subtitle]="'seconds remaining...'" (countdownFinished)="returnHome()">
-    </app-countdown-timer>
+    <app-countdown-timer page-action #countdown class="flex-grow countdown" [countdownLength]="30" [subtitle]="'seconds remaining...'" (countdownFinished)="returnHome()"></app-countdown-timer>
     <button page-action class="action" (click)="onSkipQuestion()">Skip</button>
     <a page-action class="action button" [routerLink]="['/results', this.question.id]">Results</a> 
     <button page-action class="action" (click)="onSubmit()">Submit</button>
