--- a/src/app/question/question.component.scss
+++ b/src/app/question/question.component.scss
@@ -6,31 +6,37 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.answer {
+  flex-direction: row;
+  flex: 1 1 300px;
+  display: flex;
+  align-items: center;
 }
 
 .answer-text {
   padding-right: 10px;
+  display: inline-block;
+  white-space: nowrap;
 }
-
-
 
 .selected {
     background-color: rgba(138, 43, 226, 0.4);
 }
 
-.flex {
-    display: inline-flex;
-    align-items: center;
-    flex-direction: row;
-}
-
 .flex-grow {
-    flex: 1 0 auto;
+    flex: 1 0 0px;
 }
 
 .action {
-  min-width: 150px;
+  min-width: 175px;
+}
+
+.countdown {
+  margin-left: 15px;
 }
 
 
