--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,8 @@ body {
     color: white;
     margin: 0px;
     padding: 0px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
 }
 
 a.button,
@@ -34,15 +36,13 @@ button {
     
     margin: 10px;
     height: 90px;
-    min-width: 300px;
-    padding-left: 10px;
-    padding-right: 10px;
 
     color: white;
     background-color: transparent;
     
     text-align: center;
     text-decoration: none;
+    cursor: pointer;
 }
 
 a.button {
@@ -62,9 +62,8 @@ button:focus {
     margin-right: auto;
 }
 
-
 .flex-grow {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
 }
 
 
