Add proper work address.

--- a/src/app/nameplate/nameplate.component.html
+++ b/src/app/nameplate/nameplate.component.html
@@ -1,5 +1,5 @@
 <app-page [title]="'Jeremy Honl - Software Architect'">
-    
+
     <div page-content class="details flex-grow">
         <div class="left">
             <img src="assets/images/profile-square.jpg" />
@@ -7,7 +7,7 @@
         <div class="right">
             <p><b>LinkedIn:</b> https://www.linkedin.com/in/jhonl/</p>
             <p><b>Web:</b> https://www.honlsoft.com</p>
-            <p>POD 1234 - WEST 60</p>
+            <p>1-West-Pod G-060</p>
         </div>
     </div>
 
