--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,75 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@use "theme";
 
-
-$green: #7ac142;
-
-
-@font-face {
-    font-family: 'Amatic SC';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Amatic SC Regular'), local('AmaticSC-Regular'), url(./assets/fonts/amaticsc.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-body {
-    font-family: 'Amatic SC' ;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    margin: 0px;
-    padding: 0px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-}
-
-a.button,
-button {
-    display: block;
-    
-    font-size: 1.5em;
-    font-family: inherit;
-
-    border: 1px solid $green;
-    border-radius: 5px;
-    
-    margin: 10px;
-    height: 90px;
-
-    color: white;
-    background-color: transparent;
-    
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-a.button {
-    line-height: 100px;
-}
-
-a.button:focus,
-button:focus {
-    outline: none;
-}
-
-
-
-.centered {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.flex-grow {
-    flex: 1 1 auto;
-}
-
-
-.question-text {
-    font-size: 2em;
-    padding: 10px;
-    margin-bottom: 30px;
-    text-align: center;
-}
+@include theme.create-theme(dark, 'Amatic SC', white, black, #7ac142 );
+@include theme.create-theme(light, 'Amatic SC', black, white, #7ac142 );
