--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,27 @@
 @use "theme";
 
-@include theme.create-theme(dark, 'Amatic SC', white, black, #7ac142 );
-@include theme.create-theme(light, 'Amatic SC', black, white, #7ac142 );
+
+
+/* latin-ext */
+@font-face {
+    font-family: 'Oxanium';
+//    font-style: normal;
+//    font-weight: 400;
+//    font-display: swap;
+    src: url(assets/fonts/oxanium.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+@font-face {
+    font-family: 'Amatic SC';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(assets/fonts/amaticsc.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+@include theme.create-theme(dark, 'Oxanium', white, black, #7ac142 );
+@include theme.create-theme(light, 'Oxanium', black, white, #7ac142 );
