Fix margin/padding for body after moving theme to originate on a div.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,8 @@
 
 body {
     background-color: darkgrey;
+    margin: 0px;
+    padding: 0px;
 }
 
 .app {
@@ -40,4 +42,5 @@ body {
         margin-left: auto;
         margin-right: auto;
     }
+
 }
